Slight rework up to srv shapes

--- a/tex/report.tex
+++ b/tex/report.tex
@@ -132,7 +132,7 @@
 
 \newpage
 \chapter{Estimation Strategy for Sparse and Irregular Observations}
-\label{sec:mean}
+\label{sec:est}
 \input{sections/3-estimation}
 
 \newpage
@@ -158,12 +158,12 @@
 \newpage
 \appendix
 \chapter{Appendix}
-\label{app:deriv}
+\label{app:app}
 \input{sections/a-appendix}
 
 \newpage
 \chapter{Supplementary Materials}
-\label{app:deriv}
+\label{app:sup}
 \input{sections/b-supplements}
 
 \newpage
