--- a/tex/sections/1-intro.tex
+++ b/tex/sections/1-intro.tex
@@ -1,36 +1,39 @@
 Statistical Shape Analysis \parencite[see e.g.][]{DrydenMardia2016} is a branch of statistics concerned with modelling the geometry of objects.
 Examples might be the outlines of bones and organs, a handwritten digit, or the folds of a protein.
-To capture an object's geometrical information, a common approach is the use of so called \textit{landmarks}: characteristic points on an object, which match between and within populations \parencite[see][3]{DrydenMardia2016}.
+To capture an object's geometrical information, a common approach is the use of so called \textit{landmarks}, characteristic points on an object, which match between and within populations \parencite[see][3]{DrydenMardia2016}.
 However, in recent years an alternative approach has gained in popularity, where objects are represented using curves.
-This has the advantage of a more flexible representation of an object's geometry, as the analysis is not restricted to a set of discrete points along the object.
-Usually, the curves are themselves represented by functions $\beta : [0,1] \rightarrow \mathbb{R}^k$, which, for example in 2D, might describe the outlines of an object in an image. 
+This has the advantage of a more flexible representation of an object's geometry, as the analysis is not restricted to a fixed set of discrete points.
+The curves are usually themselves represented by functions $\beta : [0,1] \rightarrow \mathbb{R}^k$, which, for example for $k = 2$, might describe the outlines of an object in an image. 
 As each object corresponds to one observation, this opens up a connection to the branch of statistics concerned with observations that are whole functions: Functional Data Analysis \parencite[see e.g.][]{RamsaySilverman2005}.
 
-When analysing the geometry of objects, differences in location, rotation, and size are often not of interest.
+Differences in location, rotation, and size are often not of interest, when analyzing the geometry of objects.
 Instead, the focus lies purely on their differences in  \textit{shape}, a widely adapted definition of which was established by \cite{Kendall1977} and which might be formulated in the following way:
 \begin{definition}[Shape] 
     All geometrical information that remains when location, scale and rotational effects are removed from an object \parencite[see][1]{DrydenMardia2016}.
 \end{definition}
-\noindent Additionally, the functional approach to shape analysis necessitates invariance relating to parametrisation, as only the image of any function describing e.g.\ an object's outline, but not its parametrisation, is indacative of the object's shape.
+\noindent When considering the shapes of curves, one has to additionally take into account effects relating to re-parametrisation, as only the image of any function describing e.g.\ an object's outline, but not its parametrisation, is indacative of the object's shape.
 
-When analysing object data, a prerequisite for many statistical methods is the ability to measure the distance between observations.
-\cite{SrivastavaEtAl2011} introduced a mathematical framework for the shape analysis of curves, by using their square-root-velocity (SRV) representation and an elastic metric, which takes invariance under re-parametrisation into account.
-While this SRV framework has been used for the calculation of elastic shape means, which also include invariance under scaling, rotation and translation, most of these approaches focus on \enquote{Riemannian} or \enquote{geodesic} mean concepts \textbf{[cite examples here? Srivastava?]}.
+A prerequisite for many statistical methods is the ability to measure distances between observations.
+\textbf{[Can't use euclidean distance etc.]}
+\cite{SrivastavaEtAl2011} introduced a mathematical framework for analysing the shape of curves, by using their square-root-velocity (SRV) representation and an elastic metric, which is isometric under re-parametrisation.
+While this SRV framework has been used for the calculation of elastic shape means before, which also include invariance under scaling, rotation and translation, most of these approaches focus on \enquote{Riemannian} or \enquote{geodesic} mean concepts \textbf{[cite examples here? Srivastava?]}.
 
-Another popular mean concept from landmark shape analysis is the \textit{Full Procrustes Mean}, which has particularly nice properties in two dimensions, when identifying $\mathbb{R}^2$ with $\mathbb{C}$ \parencite[see][Chap.\ 8]{DrydenMardia2016}, as its calculation can be shown to be related to an eigenfunction problem of the complex covariance surface of the observed curves.
+The \textit{Full Procrustes Mean} is a different shape mean concept, which is widely used when working with landmark data, and which has particularly nice properties in two dimensions, when identifying $\mathbb{R}^2$ with $\mathbb{C}$ \parencite[see][Chap.\ 8]{DrydenMardia2016}.
+When working with curves, its calculation can be shown to be related to an eigenfunction problem of the complex covariance surface of the observed curves.
 This offers an advantage when working in the challenging setting of sparsely and irregularly sampled curves, as appropriate smoothing techniques for estimation of covariance surfaces in this setting are already known.
-Here, in particular, \cite{CederbaumScheiplGreven2018} offers a method for efficient covariance smoothing in the sparse setting. 
+Here in particular, \cite{CederbaumScheiplGreven2018} offers a method for efficient covariance smoothing in the sparse setting. 
 
 The aim of this thesis is to extend existing methods for elastic mean estimation of sparse and irregularly sampled curves, as proposed by \cite{Steyer2021} and implemented in the \texttt{R} package \texttt{elasdics} \parencite{elasdics}, to also include invariance with respect to rotation and scaling.
-The later will be achieved by generalizing the concept of the \textit{Full Procrustes Mean} from landmark to functional data and by iteratively applying parametrization- and rotation-alignment and full Procrustes mean estimation \textbf{[Be more precise.]}, leading to the estimation of shape means in the form of \textit{Elastic Full Procrustes Means}.
+The later will be achieved by generalizing the concept of the \textit{Full Procrustes Mean} from landmark to functional data and by iteratively applying parametrization-alignment, rotation-alignment and full Procrustes mean estimation, leading to the estimation of \textit{Elastic Full Procrustes Means}.
 To make use of the nice properties of the Procrustes mean in two dimensions, analysis will be restricted to the case of planar curves.
 Here, appropriate smoothing techniques for sparse estimation of the complex covariance surfaces, as available in the \texttt{R} package \texttt{sparseFLMM} \parencite{sparseFLMM}, will be used.
 
 The thesis is organized as follows. 
-\textbf{[Organize this at the end.]}
-After covering the relevant background material  in section \ref{sec:theo}, an expression for the elastic full Procrustes mean will be derived in section \ref{sec:mean}.
-In section \ref{sec:algo}, an estimation strategy for the setting of sparse and irregular curves is proposed, which will be applied to simulated and empirical datasets in section \ref{sec:app}.
-Finally, in section \ref{sec:outl} a possible extension to closed curves will be briefly discussed.
-All results will be summarized in section \ref{sec:sum}.
+\textbf{[Update this later.]}
+After covering the relevant background material and deriving an expression for the elastic full Procrustes mean in Section \ref{sec:theo}.
+An estimation strategy for the setting of sparse and irregular curves will be proposed in Section \ref{sec:est}.
+The methods will be verified using simulated and empirical datasets in Section \ref{sec:app}.
+Finally, all results will be summarized in section \ref{sec:sum}.
+Appendix \ref{app:app} and Supplements \ref{app:sup} offer additional considerations and reproducability guides.
 
 \newpage
