--- a/tex/references.bib
+++ b/tex/references.bib
@@ -28,7 +28,6 @@
     journal={Advances in Applied Probability}, 
     volume={9}, 
     number={3}, 
-    DOI={10.2307/1426091}, 
     publisher={Cambridge University Press}, 
     pages={428–430}
 }
@@ -38,6 +37,14 @@
   year         = {2005},
   series       = {Springer series in statistics}
 }
+@Article{Rao1945,
+  author    = {Rao, C. R.},
+  title     = {Information and accuracy attainable in the estimation of statistical parameters},
+  year      = {1945},
+  journal   = {Bulletin of Calcutta Mathematical Society},
+  volume    = {37},
+  pages     = {81-91}
+}
 @article{SrivastavaEtAl2011,
   author = {A. {Srivastava} and E. P. {Klassen} and S. H. {Joshi} and I. H. {Jermyn}},
   title = {Shape Analysis of Elastic Curves in Euclidean Spaces},
@@ -45,7 +52,7 @@
   year = 2011,
   volume = 33,
   number = 7,
-  pages = {1415--1428},
+  pages = {1415-1428},
 }
 @book{SrivastavaKlassen2016,
   author = {A. {Srivastava} and E. P. {Klassen}},
