--- a/tex/sections/a-appendix.tex
+++ b/tex/sections/a-appendix.tex
@@ -1,6 +1,6 @@
 \section{Additional Proofs and Derivations}
 
-\paragraph{Derivation of the Full Procrustes Distance for Functional Data}
+\subsection{Derivation of the Full Procrustes Distance for Functional Data}
 \label{app:deriv-full-proc-dist}
 Consider two curves $\beta_1, \beta_2 : [0,1] \rightarrow \mathbb{C}$ with $\langle \beta_1, \mathbb{1} \rangle = \langle \beta_2, \mathbb{1} \rangle = 0$ where $\mathbb{1}$ is the constant function $\mathbb{1}(t) = 1$ for all $t \in [0,1]$.
 Then $\beta_1$ and $\beta_2$ can be considered to be centered as
@@ -75,5 +75,7 @@ $$ d_F = \sqrt{1 - \langle \tilde\beta_1, \tilde\beta_2 \rangle
 
 
 \section{Discussion of Possible Extensions to Closed Curves}
+\label{app:closed}
+
 
 \section{Shape-Smoothing Using the Estimated Covariance-Surface}
